charts/monitoring/grafana-nodeport.yml
# Browser access without Traefik/DNS: http://<any-node-ip>:30300
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana-external
    app.kubernetes.io/part-of: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: kube-prom
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
      nodePort: 30300
